Minor documentation fix

--- a/doc/algorithm.html.in
+++ b/doc/algorithm.html.in
@@ -87,7 +87,7 @@
 	  <td>
 	    <a href="@HPPMANIPULATIONURDF_LINK@">hpp-manipulation-urdf</a>
 	  </td>
-	  <td>Enhance hpp-model-urdf to support datas required by hpp-manipulation.</td>
+    <td>Enhance hpp-pinocchio to support datas required by hpp-manipulation.</td>
 	</tr>
       </table>
 </ul>
