--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,24 @@
-name: Humanoid Path Planner
-markdown: kramdown
-gems:
-    - jekyll-sitemap
-
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
+title: Humanoid Path Planner
+description: Software for Motion and Manipulation Planning
 baseurl: "/hpp-doc"
-
 github-url: "https://github.com/humanoid-path-planner/hpp-doc"
+remote_theme: Gepetto/jekyll-theme
+markdown: kramdown
+
+category_list:
+  - name: Getting Started
+    icon: graduation-cap
+  - name: Documentation
+    icon: book
+    links:
+      - name: Presentation
+        url: https://humanoid-path-planner.github.io/hpp-doc/assets/hpp-presentation.pdf
+      - name: API documentation
+        url: https://humanoid-path-planner.github.io/hpp-doc/api/hpp-doc/index.html
+  - name: Development
+    icon: wrench
+    links:
+      - name: View on Github
+        url: http://www.github.com/stack-of-tasks/pinocchio
+  - name: Support
+    icon: question-circle
