--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,3 +5,11 @@ variables:
 master-14:
     image: eur0c.laas.fr:4567/humanoid-path-planner/hpp-doc/master-premade:14.04
     script: /auto-install-hpp.sh
+    only:
+      - master
+
+devel-14:
+    image: eur0c.laas.fr:4567/humanoid-path-planner/hpp-doc/devel-premade:14.04
+    script: /auto-install-hpp.sh
+    only:
+      -  devel
