Update docker files and gitlab CI file

--- a/.dockers/ubuntu-16.04/Dockerfile
+++ b/.dockers/ubuntu-16.04/Dockerfile
@@ -3,7 +3,9 @@ FROM ubuntu:16.04
 RUN echo "deb http://packages.ros.org/ros/ubuntu xenial main" > /etc/apt/sources.list.d/ros-latest.list
 RUN apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116
 
-RUN apt-get update -qqy && apt-get install -qqy \
+RUN apt-get update -qqy && apt-get upgrade -qqy
+RUN apt-get install -qqy sudo wget
+RUN apt-get install -qqy \
       autoconf \
       g++ \
       cmake \
@@ -32,7 +34,7 @@ RUN apt-get update -qqy && apt-get install -qqy \
       omniidl-python \
       libltdl-dev \
       python-matplotlib \
-      libxml2 \
+      libxml2-dev \
       libtinyxml2-dev \
       liblog4cxx10-dev \
       libltdl-dev \
