--- a/.dockers/ubuntu-16.04/Dockerfile.premade
+++ b/.dockers/ubuntu-16.04/Dockerfile.premade
@@ -1,3 +1,3 @@
-FROM eur0c.laas.fr:4567/humanoid-path-planner/hpp-doc/devel:16.04
+FROM eur0c.laas.fr:4567/humanoid-path-planner/hpp-doc/ubuntu:16.04
 
-RUN /auto-install-hpp.sh --target OpenSceneGraph-dae-plugin.install
+RUN /auto-install-hpp.sh --branch devel --target OpenSceneGraph-dae-plugin.install
