--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,9 @@ variables:
 
 .build_template: &build_definition
     stage: build
-    script: /auto-install-hpp.sh --branch ${CI_COMMIT_REF_NAME}
+    script:
+      - cp /clean_workspace $DEVEL_DIR
+      - /auto-install-hpp.sh --branch ${CI_COMMIT_REF_NAME}
     artifacts:
       paths:
         - workspace
