--- a/.dockers/ubuntu-14.04/Dockerfile.premade
+++ b/.dockers/ubuntu-14.04/Dockerfile.premade
@@ -1,4 +1,11 @@
 FROM eur0c.laas.fr:4567/humanoid-path-planner/hpp-doc/ubuntu:14.04
 
-RUN /auto-install-hpp.sh --branch devel --target doxygen-1.8.10.install
-RUN /auto-install-hpp.sh --branch devel --target OpenSceneGraph-dae-plugin.install
+RUN \
+      export DEVEL_DIR=/builds/humanoid-path-planner/hpp-doc/workspace; \
+      /auto-install-hpp.sh --branch ubuntu-14.04 --target \
+                     "doxygen-1.8.10.install \
+                     OpenSceneGraph-dae-plugin.install \
+                     qpOASES.install \
+                     eigen3.install \
+                     roboptim-trajectory-3.1.install"; \
+      mv $DEVEL_DIR /clean_workspace
