--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,9 @@ variables:
 .build_template: &build_definition
     stage: build
     script:
+      - export INSTALL_DOCUMENTATION=OFF
       - cp -r /clean_workspace $DEVEL_DIR
-      - /auto-install-hpp.sh --branch devel
+      - /auto-install-hpp.sh --branch ${CI_COMMIT_REF_NAME}
     artifacts:
       paths:
         - workspace
